# afdko

./: .flake8  CMakeLists.txt  NEWS_DRAFT.md  README.md  mypy.ini  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/workflows/: build_wheels.yml  run_cvg.yml  testpythonpackage.yml
c/addfeatures/: CMakeLists.txt  main.cpp
c/addfeatures/hotconv/: CMakeLists.txt  FeatCtx.h  FeatVisitor.cpp  hmtx.cpp  hot.cpp
c/addfeatures/pstoken/: CMakeLists.txt
c/afdko/: CMakeLists.txt  afdko_main.cpp
c/detype1/: CMakeLists.txt
c/mergefonts/: CMakeLists.txt  mergeFonts.cpp
c/rotatefont/: CMakeLists.txt  rotateFont.cpp
c/sfntdiff/: CMakeLists.txt  Dmain.c
c/sfntedit/: CMakeLists.txt  sfntedit.cpp
c/shared/: CMakeLists.txt  afdko_version.cpp.in  designspace.cpp  tx_shared.cpp  uforead.cpp  ufowrite.cpp  version.cpp.in  version.h.in
c/shared/include/: namesupport.h
c/spot/: CMakeLists.txt  main.c
c/type1/: CMakeLists.txt
cython/: _internal.pyx
docs/: CIDKeyedUFOGuide.md  C_CPP_Changes.md  CommandLineHowTo.md  Deprecation_System.md  MakeOTFUserGuide.md  OpenTypeFeatureFileSpecification.md  README.md
python/afdko/: _build_scripts.py  _deprecated.py  completion.py  fdkutils.py  invoker.py
python/afdko/otfautohint/: __init__.py  autohint.py  fdTools.py  glyphData.py  hinter.py  hintstate.py  logging.py  otfFont.py  overlap.py  report.py  splitpsdicts.py  ufoFont.py
tests/: addfeatures_test.py  convertfonttocid_test.py  detype1_test.py  invoker_test.py  makeinstancesufo_test.py  makeotf_test.py  mergefonts_test.py  otc2otf_test.py  otfautohint_test.py  sfntedit_test.py  spot_test.py  test_invoker_utils.py  test_utils.py  tx_test.py  type1_test.py
tests/addfeatures_data/input/: missing_semicolon.fea
tests/addfeatures_data/input/bug1798/: font_negative_width.cff
tests/checkoutlinesufo_data/expected_output/: cidfont.subset.checked  font.cff  font.pfa  font.pfb  font.ttx
tests/checkoutlinesufo_data/expected_output/ufo2-dflt-layer.ufo/data/: com.adobe.type.processedHashMap
tests/checkoutlinesufo_data/expected_output/ufo2-dflt-layer.ufo/glyphs/: H_bar.glif
tests/checkoutlinesufo_data/expected_output/ufo3-dflt-layer.ufo/glyphs/: H_bar.glif
tests/checkoutlinesufo_data/expected_output/ufo3-proc-layer.ufo/glyphs.com.adobe.type.processedglyphs/: H_bar.glif
tests/makeinstancesufo_data/expected_output/bold.ufo/glyphs.com.adobe.type.processedglyphs/: a.glif  aacute.glif  adieresis.glif  atilde.glif
tests/makeinstancesufo_data/expected_output/extralight.ufo/glyphs.com.adobe.type.processedglyphs/: a.glif  aacute.glif  adieresis.glif  atilde.glif
tests/makeinstancesufo_data/expected_output/light.ufo/glyphs.com.adobe.type.processedglyphs/: a.glif  aacute.glif  adieresis.glif  atilde.glif
tests/makeinstancesufo_data/expected_output/regular.ufo/glyphs.com.adobe.type.processedglyphs/: Y_.glif  Y_acute.glif  Y_dieresis.glif  Y_tilde.glif  a.glif  aacute.glif  adieresis.glif  atilde.glif
tests/makeinstancesufo_data/expected_output/regular1.ufo/glyphs.com.adobe.type.processedglyphs/: Y_.glif  Y_acute.glif  Y_dieresis.glif  Y_tilde.glif  a.glif  aacute.glif  adieresis.glif  atilde.glif
tests/makeinstancesufo_data/expected_output/ufo3regular.ufo/glyphs.com.adobe.type.processedglyphs/: a.glif  aacute.glif  adieresis.glif  atilde.glif
tests/makeinstancesufo_data/expected_output/ufo3semibold.ufo/glyphs.com.adobe.type.processedglyphs/: a.glif  aacute.glif  adieresis.glif  atilde.glif
tests/makeotf_data/expected_output/: bug703.ttx  bug751.txt  clinum_output.txt  ufo2-dev.ttx  ufo2-rel.ttx  ufo3-dev.ttx  ufo3-rel.ttx
tests/otfautohint_data/input/dummy/: font.ps
tests/tx_data/expected_output/: alt-missing-glif.pfb  altlayer_foobar.txt  altlayer_processed.txt  bug1366.pfb  bug786.pfa  cidkeyed-with-multiple-fdicts.pfa  flex.txt  namekeyed-with-alt-layer.pfb  overlaps.pfa  ufo2.cff  ufo2.pfa  ufo2.ps  ufo3.ps
tests/tx_data/expected_output/bug437/ufo2.ufo/glyphs/: _notdef.glif
tests/tx_data/expected_output/bug473.ufo/glyphs/: f_a.glif
tests/tx_data/expected_output/bug740/: a.txt  b.txt
tests/tx_data/expected_output/cid_roundtrip/: cidfont.subset
tests/tx_data/expected_output/cid_roundtrip/testCID-noFDSelect.ufo/glyphs/: cid00000.glif  cid17899.glif  cid17901.glif
tests/tx_data/expected_output/cid_roundtrip/testCID-roundtrip.ufo/glyphs/: cid17900.glif  cid17902.glif  cid17903.glif  cid17904.glif  cid17905.glif  cid17906.glif  cid17907.glif  cid17908.glif  cid17909.glif  cid17910.glif  cid17911.glif  cid17912.glif  cid17913.glif  cid17914.glif  cid17915.glif  cid17916.glif  cid17917.glif  cid17918.glif  cid17919.glif  cid17920.glif  cid17921.glif  cid17922.glif  cid17923.glif  cid17924.glif  cid17925.glif  cid17926.glif  cid17927.glif  cid17928.glif  cid17929.glif  cid17930.glif  cid17931.glif  cid17932.glif  cid17933.glif  cid17934.glif  cid17935.glif  cid17936.glif  cid17937.glif  cid17938.glif  cid17939.glif  cid17940.glif  (+92 more)
tests/tx_data/expected_output/ufo-fontinfo-parsing/: empty-key-name.pfa  invalid-key-name.pfa  missing-key-name.pfa  missing-width-attr.pfa
tests/tx_data/expected_output/ufo-glifs-parsing/: missing-width2.pfa  overlaps-cidkeyed.pfa  overlaps-namekeyed.pfa
tests/tx_data/expected_output/ufo-libplist-parsing/: empty-key-value.pfb
tests/tx_data/expected_output/ufo2.ufo/glyphs/: a.glif
tests/tx_data/expected_output/ufo3.ufo/glyphs/: space.glif
tests/tx_data/input/: flex.pfa  version_zero.pfa
