[build-system]
requires = [
    "scikit-build-core",
    "setuptools-scm",
    "cython",
    "skbuild-conditional-scripts",
]
build-backend = "scikit_build_core.build"

[project]
dynamic = ["version", "scripts"]
name = "afdko"
description = "Adobe Font Development Kit for OpenType"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License, Version 2.0"}
keywords = ["font", "development", "tools"]
authors = [
    {email = "afdko@adobe.com"},
    {name = "Adobe Type team & friends"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "lxml >= 6.0.0",
    "booleanOperations >= 0.9.0",
    "defcon[lxml,pens] >= 0.10.3",
    "fontMath >= 0.9.4",
    "fontTools[unicode,woff,lxml,ufo] >= 4.59.0",  # 4.59.0+ removes fs/pkg_resources dependency
    "tqdm >= 4.66.1",
    "ufonormalizer >= 0.6.2",
    "ufoProcessor >= 1.13.1",
]

[project.urls]
repository = "https://github.com/adobe-type-tools/afdko"
documentation = "https://github.com/adobe-type-tools/afdko/tree/develop/docs"
changelog = "https://github.com/adobe-type-tools/afdko/blob/develop/NEWS.md"

# [project.scripts] is generated dynamically by skbuild-conditional-scripts
# See https://pypi.org/project/skbuild-conditional-scripts/

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov >= 2.6.1",
    "pytest-xdist >= 2.5.0",
]

[tool.scikit-build]
# cmake.verbose = true
# logging.level = "INFO"
experimental = true
minimum-version = "0.5"
cmake.minimum-version = "3.16"
sdist.exclude = [".github"]

# Dynamic version from git tags
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

# Dynamic scripts with conditional installation
metadata.scripts.provider = "skbuild_conditional_scripts"

# Always installed: deprecated wrapper scripts for all commands
metadata.scripts.scripts.addfeatures = "afdko._deprecated:addfeatures_wrapper"
metadata.scripts.scripts.detype1 = "afdko._deprecated:detype1_wrapper"
metadata.scripts.scripts.mergefonts = "afdko._deprecated:mergefonts_wrapper"
metadata.scripts.scripts.rotatefont = "afdko._deprecated:rotatefont_wrapper"
metadata.scripts.scripts.sfntdiff = "afdko._deprecated:sfntdiff_wrapper"
metadata.scripts.scripts.sfntedit = "afdko._deprecated:sfntedit_wrapper"
metadata.scripts.scripts.spot = "afdko._deprecated:spot_wrapper"
metadata.scripts.scripts.tx = "afdko._deprecated:tx_wrapper"
metadata.scripts.scripts.type1 = "afdko._deprecated:type1_wrapper"
metadata.scripts.scripts.buildcff2vf = "afdko._deprecated:buildcff2vf_wrapper"
metadata.scripts.scripts.buildmasterotfs = "afdko._deprecated:buildmasterotfs_wrapper"
metadata.scripts.scripts.checkoutlinesufo = "afdko._deprecated:checkoutlinesufo_wrapper"
metadata.scripts.scripts.comparefamily = "afdko._deprecated:comparefamily_wrapper"
metadata.scripts.scripts.makeinstancesufo = "afdko._deprecated:makeinstancesufo_wrapper"
metadata.scripts.scripts.makeotf = "afdko._deprecated:makeotf_wrapper"
metadata.scripts.scripts.makeotfexe = "afdko._deprecated:makeotfexe_wrapper"
metadata.scripts.scripts.otc2otf = "afdko._deprecated:otc2otf_wrapper"
metadata.scripts.scripts.otf2otc = "afdko._deprecated:otf2otc_wrapper"
metadata.scripts.scripts.otf2ttf = "afdko._deprecated:otf2ttf_wrapper"
metadata.scripts.scripts.ttfcomponentizer = "afdko._deprecated:ttfcomponentizer_wrapper"
metadata.scripts.scripts.ttfdecomponentizer = "afdko._deprecated:ttfdecomponentizer_wrapper"
metadata.scripts.scripts.ttxn = "afdko._deprecated:ttxn_wrapper"
metadata.scripts.scripts.charplot = "afdko._deprecated:charplot_wrapper"
metadata.scripts.scripts.digiplot = "afdko._deprecated:digiplot_wrapper"
metadata.scripts.scripts.fontplot = "afdko._deprecated:fontplot_wrapper"
metadata.scripts.scripts.fontplot2 = "afdko._deprecated:fontplot2_wrapper"
metadata.scripts.scripts.fontsetplot = "afdko._deprecated:fontsetplot_wrapper"
metadata.scripts.scripts.hintplot = "afdko._deprecated:hintplot_wrapper"
metadata.scripts.scripts.waterfallplot = "afdko._deprecated:waterfallplot_wrapper"
metadata.scripts.scripts.otfautohint = "afdko._deprecated:otfautohint_wrapper"
metadata.scripts.scripts.otfstemhist = "afdko._deprecated:otfstemhist_wrapper"

# Conditionally installed: Python wrapper for unified afdko command
# Only installed when AFDKO_COMMAND_USE_WRAPPER=ON
# When not installed, CMake installs the C++ binary instead
metadata.scripts.conditional-scripts.afdko = "afdko.invoker:main"
metadata.scripts.condition-env-var = "AFDKO_COMMAND_USE_WRAPPER"
metadata.scripts.condition-env-value = "ON"

[tool.setuptools_scm]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:tostring:DeprecationWarning",
    "ignore:fromstring:DeprecationWarning",
    "ignore:The py23 module:DeprecationWarning",
]
